# BACKEND/src/routes/userPlan.routes.js
@@ -1,0 +1,10 @@
+const express = require('express')
+const router = express.Router()
+
+const userPlanController = require('../controllers/UserPlan.controller')
+
+const { authenticateToken } = require('../middleware/auth')
+
+router.post('/subscribe', authenticateToken, userPlanController.subscribe)
+
+module.exports = router
